compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__new_type_import_syntax.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\nimport a.{type A, A}\n\npub fn main() {\n  A\n}\n"
---
----- SOURCE CODE

import a.{type A, A}

pub fn main() {
  A
}


----- COMPILED JAVASCRIPT
import * as $a from "../../package/a.mjs";
import { A$A$const } from "../../package/a.mjs";

export function main() {
  return A$A$const;
}
