compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__opaque_types_typescript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "pub opaque type Animal {\n  Cat(goes_outside: Bool)\n  Dog(plays_fetch: Bool)\n}\n"
---
----- SOURCE CODE
pub opaque type Animal {
  Cat(goes_outside: Bool)
  Dog(plays_fetch: Bool)
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

declare class Cat extends _.CustomType {
  /** @deprecated */
  constructor(goes_outside: boolean);
  /** @deprecated */
  goes_outside: boolean;
}

declare class Dog extends _.CustomType {
  /** @deprecated */
  constructor(plays_fetch: boolean);
  /** @deprecated */
  plays_fetch: boolean;
}

export type Animal$ = Cat | Dog;
