compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__qualified.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other\n\npub fn main() {\n  other.One\n}\n"
---
----- SOURCE CODE
-- other.gleam
pub type One { One }

-- main.gleam
import other

pub fn main() {
  other.One
}


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return $other.One$One$const;
}
