compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__record_with_field_named_prototype_typescript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub type Box {\n  Box(prototype: Int)\n}\n"
---
----- SOURCE CODE

pub type Box {
  Box(prototype: Int)
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export class Box extends _.CustomType {
  /** @deprecated */
  constructor(prototype$: number);
  /** @deprecated */
  prototype$: number;
}
export function Box$Box(prototype$: number): Box$;
export function Box$isBox(value: any): value is Box$;
export function Box$Box$0(value: Box$): number;
export function Box$Box$prototype(value: Box$): number;

export type Box$ = Box;
