compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__record_with_field_named_then.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub type Thing {\n  Thing(then: Nil)\n}\n\npub fn main() {\n  let a = Thing(then: Nil)\n  let b = Thing(..a, then: Nil)\n  b.then\n}\n"
---
----- SOURCE CODE

pub type Thing {
  Thing(then: Nil)
}

pub fn main() {
  let a = Thing(then: Nil)
  let b = Thing(..a, then: Nil)
  b.then
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(then$) {
    super();
    this.then$ = then$;
  }
}

export function main() {
  let a = new Thing(undefined);
  let b = a.withFields({ then$: undefined });
  return b.then$;
}
